tests/error/including_endif_header.c
// fail "'#endif' matches '#if' in different file."

#if 1
#include "endif_header.h"
